added urgency and made the user interface send the actors, actions, urgency, direction (last two not yet working). Delete is now working.
